--- a/client/stylesheets/containers/ProjectChat.scss
+++ b/client/stylesheets/containers/ProjectChat.scss
@@ -23,6 +23,11 @@
     display: flex;
     flex-grow: 2;
     flex-direction: column;
+    &__fetch_more{
+      width: 100%;
+      height: 4em;
+      position: relative;
+    }
     .messages{
       flex-grow: 1;
       overflow-y: auto;
