--- a/client/stylesheets/containers/ProjectList.scss
+++ b/client/stylesheets/containers/ProjectList.scss
@@ -26,6 +26,13 @@
     justify-content: center;
     padding:0 20px;
   }
+
+  &__fetch_more{
+    width: 100%;
+    height: 4em;
+    position: relative;
+  }
+
 }
 
 .new_project{
