--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -39,7 +39,7 @@ body{
   margin: 0;
   line-height: 25px;
   font-size: 12px;
-  font-family: 'Merriweather';
+  font-family: 'Merriweather', 'Arial';
   min-height: 100%;
   @media only screen and (max-width: 480px){
     font-size: 10px;
