--- a/client/stylesheets/components/Appbar/Appbar.scss
+++ b/client/stylesheets/components/Appbar/Appbar.scss
@@ -74,7 +74,9 @@
       margin: 0;
       width: 35px;
       padding: 2px;
-      background: $tertiary;
+      border: none;
+      cursor: pointer;
+      background: none;
       border-radius: 4px;
     }
     @media only screen and (max-width: 480px){
