--- a/client/stylesheets/containers/ProjectForm.scss
+++ b/client/stylesheets/containers/ProjectForm.scss
@@ -18,6 +18,15 @@
     left: 50%;
     transform: translate(-50%);
   }
+  &__pin {
+    width: 25%;
+    display: flex;
+    align-items: center;
+    .pin {
+      width: auto;
+      margin-right: 15px;
+    }
+  }
   .close_button{
     position: absolute;
     top: 10px;
