--- a/client/stylesheets/containers/ProjectChat.scss
+++ b/client/stylesheets/containers/ProjectChat.scss
@@ -17,11 +17,12 @@
   }
 
   .chat_room{
-    margin-top:10px;
+    // margin-top: 5px;
     width: 100%;
-    min-height: 0;
+    // min-height: 0;
+    height: 100%;
     display: flex;
-    flex-grow: 2;
+    // flex-grow: 2;
     flex-direction: column;
     &__fetch_more{
       width: 100%;
@@ -29,7 +30,8 @@
       position: relative;
     }
     .messages{
-      flex-grow: 1;
+      // flex-grow: 1;
+      flex: 9;
       overflow-y: auto;
       ul{
         list-style: none;
@@ -39,7 +41,8 @@
       }
     }
     .chat_message_box{
-      flex-shrink: 0;
+      // flex-shrink: 0;
+      flex: 1;
       padding:5px;
       display: flex;
       flex-direction: row;
