minor style changes

--- a/client/stylesheets/components/Appbar/Appbar.scss
+++ b/client/stylesheets/components/Appbar/Appbar.scss
@@ -1,8 +1,8 @@
 
 .appbar{
   height: 60px;
-  background: $card-color;
-  color: $secondary;
+  background: $ghost-white;
+  color: $black;
   border-bottom: $border;
   position: fixed;
   width: 100%;
