minor css changes

--- a/client/stylesheets/components/Appbar/Appbar.scss
+++ b/client/stylesheets/components/Appbar/Appbar.scss
@@ -70,13 +70,22 @@
     font-size: 1.5em;
     display: flex;
     flex-direction: column;
+    a{
+      color: $black;
+      &:visited{
+        color: $black;
+      }
+    }
     button{
       margin: 0;
-      width: 35px;
+      width: 10em;
+      font-size: 0.6em;
       padding: 2px;
       border: none;
       cursor: pointer;
       background: none;
+      color: $black;
+      background: $dark-gray;
       border-radius: 4px;
     }
     @media only screen and (max-width: 480px){
@@ -97,15 +106,12 @@
       margin-top: 1em;
     }
     .profile_menu{
-      // max-height: 150px;
-      // background: $primary;
       position: absolute;
       top: 65px;
       border: 1px solid #ccc;
       right: 2.5em;
       z-index: 999;
       background: #fcf7ff;
-      // box-shadow: 0 2px 10px rgba(0,0,0,.2);
       display: none;
       width: auto;
       height: auto;
@@ -148,6 +154,7 @@
     overflow: auto;
     padding: 10px;
     position: relative;
+    border-radius: 4px;
     .member_list{
       display: flex;
       justify-content: center;
@@ -156,12 +163,13 @@
         position: absolute;
         top: 0.5px;
         right: 10px;
+        cursor: pointer;
       }
       &__member{
         width: 100%;
         padding: 10px;
         display: flex;
-        margin-bottom: 5px;
+        // margin-bottom: 5px;
         background: $white;
         text-align: center;
         text-align: center;
