--- a/client/stylesheets/containers/ProjectChat.scss
+++ b/client/stylesheets/containers/ProjectChat.scss
@@ -49,7 +49,7 @@
       .message_box{
         padding: 5px 5px;
         border: 0.5px solid black;
-        // border-radius: 2px;
+        border-radius: none;
         flex-grow:2;
         background-color: $white;
         border-radius: 4px;
@@ -66,7 +66,7 @@
         background: $blue;
         color: $ghost-white;
         border: 2.5px solid $blue;
-        border-radius: 4px;
+        // border-radius: 4px;
         align-self: flex-end;
         cursor: pointer;
       }
