--- a/client/stylesheets/containers/ProjectDetail.scss
+++ b/client/stylesheets/containers/ProjectDetail.scss
@@ -53,9 +53,9 @@
       margin-top : 1.5em;
       button{
         font-size: 0.8em;
-        background: none;
+        background: $dark-gray;
         padding: 5px;
-        color: #0f0f0f;
+        color: $black;
         border: 1px solid rgba(0, 0, 0, 0.15);
         border-radius: 4px;
         margin-right: 5px;
@@ -86,6 +86,8 @@
         border-radius: 4px;
         color: #f8f8f8;
         font-weight: 300;
+        padding: 10px;
+        cursor: pointer;
       }
       @media only screen and (max-width: 480px){
         text-align: center;
