--- a/client/stylesheets/containers/ProjectForm.scss
+++ b/client/stylesheets/containers/ProjectForm.scss
@@ -6,6 +6,7 @@
   position: relative;
   padding: 2.5em;
   height: 500px;
+  border-radius: 4px;
   @media only screen and (max-width: 480px){
     flex-direction: column;
     height: auto;
@@ -41,12 +42,32 @@
     width: 50%;
     padding: 10px;
     margin-top: 35px;
-    .item{
+    .item {
       height: 100%;
       width: 100%;
       margin-bottom: 10px;
+      .error{
+        color: $error;
+      }
+      h3 {
+        span {
+          font-size: 0.58em;
+          color: #a5a5a5;
+        }
+      }
       &:last-child{
         margin-bottom: 5px;
+      }
+      .Select{
+        .Select-control{
+          .Select-multi-value-wrapper{
+            .Select-input{
+              input {
+                box-sizing: border-box !important;
+              }
+            }
+          }
+        }
       }
     }
     @media only screen and (max-width: 480px){
@@ -54,6 +75,7 @@
       padding-left: 0px;
     }
   }
+
   .secondary_content{
     textarea{
       height: 303px;
@@ -64,13 +86,16 @@
   }
   .form_submit{
     position: absolute;
-    bottom: 60px;
+    bottom: 30px;
     transform: translate(-50%);
     left: 50%;
     button {
       padding: 10px;
-      background: #52489c;
-      color: #f5f5f5;
+      border-radius: 4px;
+      background: $blue;
+      color: $white;
+      cursor: pointer;
+      position: relative;
     }
     @media only screen and (max-width: 480px){
       bottom: 10px;
