--- a/client/stylesheets/containers/ProjectDetail.scss
+++ b/client/stylesheets/containers/ProjectDetail.scss
@@ -82,9 +82,9 @@
       text-align: right;
       padding-right: 10px;
       button{
-        background: #52489c;
+        background: $dark-blue;
         border-radius: 4px;
-        color: #f8f8f8;
+        color: $ghost-white;
         font-weight: 300;
         padding: 10px;
         cursor: pointer;
