--- a/client/stylesheets/containers/ProjectForm.scss
+++ b/client/stylesheets/containers/ProjectForm.scss
@@ -97,7 +97,7 @@
     button {
       padding: 10px;
       border-radius: 4px;
-      background: $blue;
+      background: $dark-blue;
       color: $white;
       cursor: pointer;
       position: relative;
