--- a/client/stylesheets/containers/App.scss
+++ b/client/stylesheets/containers/App.scss
@@ -43,7 +43,8 @@
     margin-left: 20%;
     width: 80%;
     @media only screen and (max-width: 480px){
-      margin-left: 80%;
+      // margin-left: 100%;
+      width: 0%;
       opacity: 0;
     }
   }
