--- a/client/stylesheets/components/Appbar/Appbar.scss
+++ b/client/stylesheets/components/Appbar/Appbar.scss
@@ -100,15 +100,24 @@
   }
   .auth{
     &__profile_icon{
-      background: $black;
-      color: $white;
+      background: none;
+      padding: 5px;
       cursor: pointer;
-      border-radius: 50%;
-      margin-right: 1em;
-      outline: none;
-      height: 2em;
-      width: 2em;
-      margin-top: 1em;
+      img{
+
+        border-radius: 50%;
+        margin-right: 1em;
+        outline: none;
+        height: 2em;
+        width: 2em;
+        margin-top: 0.4em;
+      }
+      @media only screen and (max-width: 480px){
+        margin-top: 1em;
+        margin-right: 1em;
+        font-size: 1em;
+        margin:0;
+      }
     }
     .profile_menu{
       position: absolute;
