--- a/client/stylesheets/containers/UserProfile.scss
+++ b/client/stylesheets/containers/UserProfile.scss
@@ -37,6 +37,12 @@
       justify-content: space-between;
       padding-bottom: 30px;
       &__level,&__xp{
+        h3{
+          text-decoration: underline;
+          text-decoration-color: $accent;
+          // color: $accent;
+
+        }
         width: 50%;
       }
     }
@@ -59,9 +65,14 @@
       width: 100%;
       text-align: center;
       vertical-align: middle;
+      .help_icon{
+        color: $dark-blue;
+        margin-left: 10px;
+        cursor: pointer;
+      }
     }
     &__add{
-      height: 3em;
+      height: auto;
       display: flex;
       padding-left: 20px;
       padding-right: 20px;
@@ -78,6 +89,11 @@
         padding: 7px;
         border-radius: 4px;
       }
+    }
+    &__head{
+      // text-decoration: underline;
+      // text-decoration-color: $accent;
+      color: $accent;
     }
     &__table{
       width: 100%;
