--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -137,6 +137,7 @@ textarea{
 @import './components/Appbar/UserNotifications.scss';
 @import './components/loader.scss';
 @import './components/Flash_messages.scss';
+@import './components/About.scss';
 
 @import './highlight/default.css';
 @import './react-select.min.css';
